--- a/demo/index.html
+++ b/demo/index.html
@@ -20,6 +20,7 @@
         <ju-multi-select 
         selectable-datas='selectableDatas' selected-datas='selectedDatas' 
         use-search="true" over-item='overItem'
+        height="300px"
         selectable-title="Selectable Title" selected-title="Selected Title">
         </ju-multi-select>
       </div>
