--- a/demo/index.html
+++ b/demo/index.html
@@ -13,18 +13,26 @@
   <div class="container" style="margin-top:40px;">
     <div class="row" style="margin-bottom: 10px;">
       <h1>ju-multi-select Domo</h1>
-      Mouseover : {{overItem.name}}
     </div>
     <div class="row">
       <div class="col-md-6">
-        <ju-multi-select 
-        selectable-datas='selectableDatas' selected-datas='selectedDatas' 
-        use-search="true" over-item='overItem'
-        height="300px"
-        selectable-title="Selectable Title" selected-title="Selected Title">
-        </ju-multi-select>
+          <button class="btn bg-primary" ng-click="test()">Test</button>
+        <div ju-multi-select="params">
+            <div class="col-xs-6">
+                <ul ng-repeat="selectable in $selectable" ng-click="params.moveParentToSelected($index)">{{selectable.name}}
+                    <li ng-repeat="children in selectable.children" ng-click="params.moveChildToSelected($index,selectable,$event)">{{children.name}}</li>
+                </ul>
+            </div>
+            <div class="col-xs-6">
+                <ul ng-repeat="selected in $selected" ng-click="params.moveParentToSelectable($index)">{{selected.name}}
+                    <li ng-repeat="children in selected.children" ng-click="params.moveChildToSelectable($index,selected,$event)">{{children.name}}</li>
+                </ul>
+            </div>
+        </div>
       </div>
 
+
+        <button class="btn bg-primary" ng-click="showResult()">ShowResult</button>
       <div class="col-md-6">
         <div class="col-md-6">
           <h3>Selectable Items</h3>
@@ -64,18 +72,32 @@
     <script src="../dist/ju-multi-select.js"></script>
     <script>
     angular.module('demoApp', ['ngRoute','juMultiSelect'])
-    .controller('demoCtrl',['$scope',function($scope){
-      $scope.overItem = {};
+    .controller('demoCtrl',['$scope', 'JuMultiSelectParams' ,function($scope, JuMultiSelectParams){
+                $scope.params = new JuMultiSelectParams({
+                    name: "test"
+                }, {
+                    getData: function (defer) {
+                        defer.resolve({
+                            selectable:  [
+                                {id:1,name:"Radiohead",children:[{id:1,name:"Creep"},{id:2,name:"My iron lung"},{id:3,name:"Fake Plastic tree"},{id:4,name:"Bones"},{id:5,name:"High and dry"},{id:6,name:"Just"}]},
+                                {id:2,name:"RATM",children:[{id:9,name:"Wake up"},{id:8,name:"Take the power back"},{id:7,name:"Killing in the name"}]}
+                            ],
+                            selected: [
+                                {id:3,name:"RHCP",children:[{id:14,name:"Can`s stop"},{id:15,name:"Dani California"}]},
+                                {id:4,name:"Muse",children:[{id:13,name:"Hysteria"},{id:12,name:"Plug in baby"},{id:11,name:"Panic Station"},{id:10,name:"Starlight"}]}
+                            ]
+                        });
+                    }
+                });
 
-      $scope.selectableDatas = [
-      {id:1,name:"Radiohead",children:[{id:1,name:"Creep"},{id:2,name:"My iron lung"},{id:3,name:"Fake Plastic tree"},{id:4,name:"Bones"},{id:5,name:"High and dry"},{id:6,name:"Just"}]},
-      {id:2,name:"RATM",children:[{id:9,name:"Wake up"},{id:8,name:"Take the power back"},{id:7,name:"Killing in the name"}]}
-      ]
+                $scope.test = function(){
+                    $scope.params.reload();
+                };
 
-      $scope.selectedDatas = [
-      {id:3,name:"RHCP",children:[{id:14,name:"Can`s stop"},{id:15,name:"Dani California"}]},
-      {id:4,name:"Muse",children:[{id:13,name:"Hysteria"},{id:12,name:"Plug in baby"},{id:11,name:"Panic Station"},{id:10,name:"Starlight"}]}
-      ]
+                $scope.showResult = function(){
+                    $scope.selectableDatas = angular.copy($scope.params.settings().$scope.$selectable, $scope.selectableDatas);
+                    $scope.selectedDatas = angular.copy($scope.params.settings().$scope.$selected, $scope.selectedDatas);
+                };
 
     }]);
     </script>
